# extraction-methods

./: .gitignore  .pre-commit-config.yaml  .python-version  404.html  CHANGELOG.rst  README.md  README.rst  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: check.yml  publish.yml  sphinx.yml
assets/assets/: index.html
assets/backends/elasticsearch/: index.html
assets/backends/intake_esm/: index.html
assets/backends/regex/: index.html
bbox/: index.html
ceda_observation/: index.html
ceda_vocabulary/: index.html
conditional/: index.html
controlled_vocabulary/: index.html
datetime_bound_to_centroid/: index.html
default/: index.html
dict_aggregator/: index.html
docs/: conf.py  core.rst  extraction_methods.core.rst  extraction_methods.plugins.assets.backends.rst  extraction_methods.plugins.assets.rst  extraction_methods.plugins.header.backends.rst  extraction_methods.plugins.header.rst  extraction_methods.plugins.rst  extraction_methods.rst  index.md  index.rst  modules.rst  plugins.rst
docs/_build/doctrees/: changelog.doctree  code_of_conduct.doctree  contributing.doctree  core.doctree  environment.pickle  extraction_methods.core.doctree  extraction_methods.doctree  extraction_methods.plugins.assets.backends.doctree  extraction_methods.plugins.assets.doctree  extraction_methods.plugins.doctree  extraction_methods.plugins.header.backends.doctree  extraction_methods.plugins.header.doctree  index.doctree  license.doctree  modules.doctree  plugins.doctree  security.doctree
docs/_build/doctrees/autoapi/: index.doctree
docs/_build/doctrees/autoapi/extraction_methods/: index.doctree
docs/_build/doctrees/autoapi/extraction_methods/core/: index.doctree
docs/_build/doctrees/autoapi/extraction_methods/core/extraction_method/: index.doctree
docs/_build/doctrees/autoapi/extraction_methods/core/types/: index.doctree
docs/_build/doctrees/autoapi/extraction_methods/plugins/: index.doctree
docs/_build/doctrees/autoapi/extraction_methods/plugins/assets/: index.doctree
docs/_build/doctrees/autoapi/extraction_methods/plugins/bbox/: index.doctree
docs/_build/doctrees/autoapi/extraction_methods/plugins/ceda_observation/: index.doctree
docs/_build/doctrees/autoapi/extraction_methods/plugins/ceda_vocabulary/: index.doctree
docs/_build/doctrees/autoapi/extraction_methods/plugins/controlled_vocabulary/: index.doctree
docs/_build/doctrees/autoapi/extraction_methods/plugins/datetime_bound_to_centroid/: index.doctree
docs/_build/doctrees/autoapi/extraction_methods/plugins/default/: index.doctree
docs/scripts/: gen_plugins.py
elasticsearch_aggregation/: index.html
elasticsearch_search/: index.html
extraction_methods/core/: __init__.py  extraction_method.py  types.py
extraction_methods/plugins/: __init__.py  asset_aggregator.py  basename.py  bbox.py  boto_stats.py  categories.py  ceda_observation.py  ceda_vocabulary.py  conditional.py  controlled_vocabulary.py  datetime_bound_to_centroid.py  default.py  dict_aggregator.py  dot_seperated_str.py  elasticsearch_aggregation.py  elasticsearch_assets.py  elasticsearch_search.py  esgf_solr.py  facet_map.py  facet_prefix.py  general_function.py  geometry.py  geometry_line.py  geometry_point.py  geometry_polygon.py  geometry_to_bbox.py  hash.py  intake_esm.py  intake_esm_assets.py  iso19115.py  iso_date.py  json_file.py  lambda.py  netcdf.py  open_zip.py  os_stats.py  path_parts.py  regex.py  regex_assets.py  regex_label.py  (+9 more)
extraction_methods/plugins/assets/: assets.py
extraction_methods/plugins/assets/backends/: elasticsearch.py  intake_esm.py  regex.py
extraction_methods/plugins/extraction_methods/: __init__.py  basename.py  bbox.py  boto_stats.py  categories.py  ceda_observation.py  ceda_vocabulary.py  controlled_vocabulary.py  date_combinator.py  default.py  dot_seperated_str.py  elasticsearch.py  elasticsearch_assets.py  esgf_solr.py  facet_map.py  facet_prefix.py  fsspec_stats.py  general_function.py  geometry_line.py  geometry_point.py  geometry_polygon.py  hash.py  iso19115.py  iso_date.py  json_file.py  os_stats.py  path_parts.py  regex.py  regex_assets.py  remove.py  string_join.py  string_template.py  xml.py
extraction_methods/plugins/extraction_methods/header/: __init__.py  header.py
extraction_methods/plugins/extraction_methods/header/backends/: __init__.py  cf.py  xarray.py
extraction_methods/plugins/header/: header.py
extraction_methods/plugins/header/backends/: cf.py  ncml.py  xarray.py
facet_map/: index.html
facet_prefix/: index.html
general_function/: index.html
geometry/: index.html
geometry_to_bbox/: index.html
hash/: index.html
header/backends/cf/: index.html
header/backends/ncml/: index.html
header/backends/xarray/: index.html
header/header/: index.html
intake_esm/: index.html
iso19115/: index.html
iso_date/: index.html
json_file/: index.html
lambda/: index.html
netcdf/: index.html
open_zip/: index.html
path_parts/: index.html
regex/: index.html
regex_label/: index.html
regex_rename/: index.html
regex_type_cast/: index.html
remove/: index.html
scripts/: gen_plugins.py
search/: search_index.json
site/assets/backends/elasticsearch/: index.html
site/assets/backends/regex/: index.html
site/bbox/: index.html
site/ceda_observation/: index.html
site/ceda_vocabulary/: index.html
site/conditional/: index.html
site/controlled_vocabulary/: index.html
site/dict_aggregator/: index.html
site/elasticsearch_aggregation/: index.html
site/facet_map/: index.html
site/facet_prefix/: index.html
site/hash/: index.html
site/header/backends/xarray/: index.html
site/header/header/: index.html
site/iso19115/: index.html
site/json_file/: index.html
site/lambda/: index.html
site/path_parts/: index.html
site/regex/: index.html
site/regex_label/: index.html
site/remove/: index.html
stac_extension/: index.html
string_template/: index.html
tools/: gen_ref_pages.py
xml/: index.html
(+34 files in other folders)
