[tool.poetry]
name = "extraction-methods"
version = "0.0.3"
description = "Methods to enable the extraction of metadata"
authors = ["rhysrevans3 <rhys.r.evans3@gmail.com>"]
license = "BSD - See extraction_methods/LICENSE file for details"
readme = "README.md"
homepage = "https://github.com/cedadev/extraction-methods"
keywords = ['metadata', 'plugin', 'extraction']

packages = [
    { include = "extraction_methods"},
]

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.9.2"
alabaster = "0.7.12"
anytree = "2.8.0"
async-timeout = "4.0.3"
babel = "2.9.1"
boto3 = "1.18.44"
botocore = "1.21.44"
cachetools = "4.2.4"
certifi = "2023.7.22"
chardet = "4.0.0"
docutils = "0.16"
elasticsearch = "7.13.1"
fsspec = "2024.3.1"
gcsfs = "2024.3.1"
idna = "2.10"
imagesize = "1.2.0"
jinja2 = "3.1.3"
jmespath = "0.10.0"
multidict = "5.1.0"
packaging = "21.3"
pika = "1.2.0"
pydantic = "2.1.1"
pygments = "2.15.0"
pyparsing = "2.4.7"
python-dateutil = "2.8.2"
python-magic = "0.4.25"
pytz = "2021.1"
pyyaml = "6.0.1"
requests = "2.31.0"
s3transfer = "0.5.0"
siphon = "0.9"
six = "1.16.0"
snowballstemmer = "2.1.0"
tqdm = "4.62.3"
typing-extensions = "4.7.1"
urllib3 = "1.26.18"

[tool.poetry.extras]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "sphinxcontrib-programoutput",
]
intake-esm = ["intake-esm"]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.isort]
profile = "black"

[tool.mypy]
strict = false
ignore_missing_imports = true
packages = "extraction_methods"

[tool.poetry.plugins."extraction_methods"]
regex = "extraction_methods.plugins.regex:RegexExtract"
regex_assets = "extraction_methods.plugins.regex_assets:RegexAssetsExtract"
rename_assets = "extraction_methods.plugins.rename_assets:RenameAssetsExtract"
default = "extraction_methods.plugins.default:DefaultExtract"
categories = "extraction_methods.plugins.categories:CategoriesExtract"
header = "extraction_methods.plugins.header.header:HeaderExtract"
iso19115 = "extraction_methods.plugins.iso19115:ISO19115Extract"
xml = "extraction_methods.plugins.xml:XMLExtract"
open_zip = "extraction_methods.plugins.open_zip:ZipExtract"
datetime_bound_to_centroid = "extraction_methods.plugins.datetime_bound_to_centroid:DatetimeBoundToCentroidExtract"
elasticsearch_aggregation = "extraction_methods.plugins.elasticsearch_aggregation:ElasticsearchAggregationExtract"
json_file = "extraction_methods.plugins.json_file:JsonFileExtract"
path_parts = "extraction_methods.plugins.path_parts:PathPartsExtract"
os_stats = "extraction_methods.plugins.os_stats:OsStatsExtract"
boto_stats = "extraction_methods.plugins.boto_stats:BotoStatsExtract"
fsspec_stats = "extraction_methods.plugins.fsspec_stats:FsSpecStatsExtract"
ceda_vocabulary = "extraction_methods.plugins.ceda_vocabulary:CEDAVocabularyExtract"
controlled_vocabulary = "extraction_methods.plugins.controlled_vocabulary:ControlledVocabularyExtract"
dot_seperated_str = "extraction_methods.plugins.dot_seperated_str:DotSeperatedStrExtract"
hash = "extraction_methods.plugins.hash:HashExtract"
basename = "extraction_methods.plugins.basename:BasenameExtract"
ceda_observation = "extraction_methods.plugins.ceda_observation:CEDAObservationExtract"
iso_date = "extraction_methods.plugins.iso_date:ISODateExtract"
facet_map = "extraction_methods.plugins.facet_map:FacetMapExtract"
bbox = "extraction_methods.plugins.bbox:BboxExtract"
stac_bbox = "extraction_methods.plugins.stac_bbox:STACBboxExtract"
geometry_line = "extraction_methods.plugins.geometry_line:GeometryLineExtract"
geometry_point = "extraction_methods.plugins.geometry_point:GeometryPointExtract"
geometry_polygon = "extraction_methods.plugins.geometry_polygon:GeometryPolygonExtract"
geometry_to_bbox = "extraction_methods.plugins.geometry_to_bbox:GeometryToBboxExtract"
string_join = "extraction_methods.plugins.string_join:StringJoinExtract"
string_template = "extraction_methods.plugins.string_template:StringTemplateExtract"
facet_prefix = "extraction_methods.plugins.facet_prefix:FacetPrefixExtract"
remove = "extraction_methods.plugins.remove:RemoveExtract"
general_function = "extraction_methods.plugins.general_function:GeneralFunctionExtract"
elasticsearch_assets = "extraction_methods.plugins.elasticsearch_assets:ElasticsearchAssetExtract"
lambda = "extraction_methods.plugins.lambda:LambdaExtract"
netcdf = "extraction_methods.plugins.netcdf:NetCDFfExtract"
asset_aggregator = "extraction_methods.plugins.asset_aggregator:AssetAggregatorExtract"
intake_assets = "extraction_methods.plugins.intake_esm_assets:IntakeESMAssetExtract"

[tool.poetry.plugins."extraction_methods.backends"]
ncml = "extraction_methods.plugins.header.backends.ncml:NcMLBackend"
xarray = "extraction_methods.plugins.header.backends.xarray:XarrayBackend"
cf = "extraction_methods.plugins.header.backends.cf:CfBackend"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
